# bootcamp_python_projeto

./: README.md  docker-compose.yml  pyproject.toml
backend/: crud.py  database.py  models.py  router.py  schema.py
