[project]
name = "bootcamp-python-projeto"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Almeida",email = "vrodrigoleite@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
